--- a/public/stylesheets/StudentProfile.css
+++ b/public/stylesheets/StudentProfile.css
@@ -1,230 +1,89 @@
-body {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: Arial, sans-serif;
-  /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-   /* height: 100vh;*/
+/* StudentProfile.css */
 
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .sidebar {
-  height: 100%;
-  width: 250px;
-  position: fixed;
-  background-color: #111;
-  padding-top: 20px;
-}
-
-.sidebar img {
-  display: block;
-  margin: 0px auto;
-
-}
-
-.sidebar nav ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.sidebar nav a {
-  display: block;
+  background-color: #2c3e50;
+  color: #ecf0f1;
   padding: 15px;
-  text-decoration: none;
-  color: white;
-  font-size: 18px;
-  border-bottom: 1px solid #444;
-}
-
-.sidebar nav a:hover {
-  background-color: #555;
-}
-
-.fa-regular {
-  color: white;
+  width: 250px;
+  height: 100vh;
+  float: left;
 }
 
 .logo img {
-  border-radius: 50%;
+  display: block;
+  margin: 0 auto;
 }
 
-.fa-solid {
-  margin-right: 4px;
+nav ul {
+  list-style: none;
+  padding: 0;
 }
 
-.container {
-  text-align: center;
-  padding: 7px;
-  margin: 7px;
+nav li {
+  margin-bottom: 10px;
 }
 
-input {
-  padding: 7px;
-  /*color: aqua;*/
-  margin-right: 5px;
-  border-bottom: 1px solid black;
-  border-radius: 5px 5px 0px 0px;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
-  /* border: none;*/
-  outline: none;
-  margin: 10px;
-  width: 40%;
-}
-
-#inputGender {
-  padding: 7px;
-  margin-right: 5px;
-  border: 1px solid black;
+nav a {
+  color: #ecf0f1;
+  text-decoration: none;
+  display: block;
+  padding: 10px;
   border-radius: 5px;
-
-  /* border: none;*/
-  outline: none;
-  margin: 10px;
-  width: 40%;
-}
-.locationSelect{
-  padding: 7px;
-/*  margin-right: 5px;*/
-  border: 1px solid black;
-  border-radius: 5px;
-
-  /* border: none;*/
-  outline: none;
-  margin: 10px;
-  width: 15%;
-}
-label {
-  float: left;
-  margin-left: 100px;
-  margin-top: 20px;
 }
 
-.editBtn {
-  background-color: rgb(26, 25, 25);
-  color: white;
-  border-radius: 5px;
-  padding: 10px 20px 10px 20px;
-  margin: 10px 40px 10px 100px;
-  border: none;
-   float: right;
-}
-
-button {
-  padding: 8px;
-  cursor: pointer;
-}
-
-.horizontal {
-  width: 90%;
-  /*display: flex;
-    justify-content: center;
-    align-items: center;*/
-  text-align: center;
-  margin: auto;
-}
-
-#saveBtn,
-#saveGenderBtn,
-#savelocation,
-#saveSummaryBtn,
-#saveWebsiteBtn,
-#saveGithubBtn,
-#saveLinkedInBtn,
-#saveWorkBtn,
-#saveTwitterBtn,
-#saveSkillsBtn,
-#saveEducationBtn,
-#saveCGPABtn,
-#saveCourseBtn {
-  display: none;
-  background-color: rgb(133, 178, 236);
-  color: white;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 18px 10px 18px;
-  margin: 10px;
-}
-
-#cancelBtn,
-#cancelGenderBtn,
-#cancellocation,
-#cancelSummaryBtn,
-#cancelWebsiteBtn,
-#cancelGithubBtn,
-#cancelLinkedInBtn,
-#cancelWorkBtn,
-#cancelTwitterBtn,
-#cancelSkillsBtn,
-#cancelEducationBtn,
-#cancelCourseBtn,
-#cancelCGPABtn {
-  display: none;
-  background-color: rgb(243, 111, 111);
-  border: none;
-  border-radius: 5px;
-  padding: 10px 18px 10px 18px;
-  margin: 10px;
-  color: white;
-}
-
-.upperDiv {
-  width: 100%;
-  height: 48vh;
-  float: right;
-  background-color: #555;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.upperDiv img {
-  padding: auto;
-  margin: auto;
-  border: 2px white solid;
-  border-radius: 10px;
-  margin: auto;
-  padding: auto;
-  cursor: pointer;
+nav a:hover {
+  background-color: #34495e;
 }
 
 .rightdiv {
-  width: 82%;
-  float: right;
+  float: left;
+  margin-left: 20px;
+  padding: 15px;
 }
 
-.parentContainer {
-  width: 90%;
-  box-shadow: 10px 0px 10px rgba(219, 221, 197, 0.5);
-  background-color: rgb(251, 253, 227);
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  margin: -20px auto 0px auto;
-  padding: auto;
-  border-radius: 20px;
+.container {
+  margin-bottom: 20px;
 }
 
-.parentContainer h3 {
-  text-align: center;
-  padding: 10px;
-  margin: 10px;
+.horizontal {
+  border: 1px solid #ecf0f1;
 }
 
 textarea {
-  padding: 7px;
-  margin-right: 5px;
-  border-bottom: 1px solid black;
-  border-radius: 5px 5px 0px 0px;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
-  outline: none;
-  margin: 10px;
-  width: 40%;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ecf0f1;
+  border-radius: 5px;
+  resize: vertical;
 }
+
+.buttons {
+  text-align: right;
+  margin-top: 20px;
+}
+
+.editBtn,
+#saveBtn,
+#cancelBtn {
+  background-color: #3498db;
+  color: #fff;
+  padding: 10px 20px;
+  margin-right: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.editBtn:hover,
+#saveBtn:hover,
+#cancelBtn:hover {
+  background-color: #2980b9;
+}
+
