--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -236,3 +236,58 @@ address{
   width: 400px;
   border-radius: 5px;
 }
+.stat{
+  margin: 10px 600px 10px 600px;
+  padding: 20px 30px 20px 30px;
+  color: white;
+  background-color: rgb(112, 112, 235);
+  cursor: pointer;
+  border-radius: 10px;
+  border: 1px solid rgb(112, 112, 235);
+  
+}
+.rec-paragraph{
+  margin: 20px;
+  justify-content: center;
+  text-align: justify;
+}
+.testimonial-container {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  height: 100%;
+}
+
+.testimonial {
+  flex: 1;
+  margin: 0 10px;
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 20px;
+  max-width:30%;
+}
+
+.testimonial img {
+  border-radius: 50%;
+  max-width: 80px;
+  margin-bottom: 10px;
+}
+
+.testimonial-name {
+  font-weight: bold;
+  color: #4285f4;
+}
+
+.testimonial-field {
+  color: #888;
+}
+
+.testimonial-description {
+  font-size: 14px;
+  line-height: 1.5;
+  color: #333;
+}
