--- a/views/mid.ejs
+++ b/views/mid.ejs
@@ -9,7 +9,7 @@
 <body>
 
 <div class="container">
-    <h1>Please select a page to open:</h1>
+    <h1>From which category You belong:</h1>
 
     <div class="dropdown">
         <select id="page-select">
@@ -18,8 +18,9 @@
             <option value="/company/CompanyRegister">Company</option>
         </select>
     </div>
-
+    <div class="btn">
     <button id="submit-button">Submit</button>
+</div>
 </div>
 
 <script src="/javascripts/mid.js"></script>
