--- a/views/AdminDashBoard.ejs
+++ b/views/AdminDashBoard.ejs
@@ -20,7 +20,7 @@
     <nav>
       <ul>
         <li><a href="#"><i class="fa-solid fa-gauge-simple-high"></i>Dashboard</a></li>
-        <li><a href="#"><i class="fa-solid fa-suitcase"></i>Job</a></li>
+        <li><a href="/admin/jobs"><i class="fa-solid fa-suitcase"></i>Job</a></li>
         <li class="popup-trigger"><a href="#"><i class="fa-solid fa-share-from-square"></i>Post</a></li>
         <li><a href="StudentDetails"><i class="fa-solid fa-users"></i></i>Students Detail</a></li>
       </ul>
