--- a/views/ResumeFrontPage.ejs
+++ b/views/ResumeFrontPage.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Home Page</title>
+        <title>Resume Builder</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/stylesheets/Resume.css">
@@ -34,7 +34,7 @@
             <div class = "container">
                 <div class = "header-content text-center">
                     <h6 class = "text-uppercase text-blue-dark fs-14 fw-6 ls-1">online resume builder</h6>
-                    <h1 class = "lg-title">Only 2% of resumes make it pas the first round. Be in the top 2%</h1>
+               <!--   <h1 class = "lg-title">Only 2% of resumes make it pas the first round. Be in the top 2%</h1> -->  
                     <p class = "text-dark fs-18">Use professional field-tested resume templates that follow that exact 'resume rules' employers look for. Easy to use and done within minutes - try now for free!</p>
                     <a href = "/student/Resume" class = "btn btn-primary text-uppercase">create my resume</a>
                     <img src = "/images/dublin-resume-templates.avif">
@@ -42,13 +42,13 @@
             </div>
         </header>
 
-        <div class="section-one">
+      <!--   <div class="section-one">
             <div class="container">
                 <div class = "section-one-content">
                     <div class="section-one-l">
                         <img src = "/images/visual-0c7080adf17f1f207276f613447c924f667dab34b7ac415cd7ef653172defd0b.svg">
                     </div>
-                    <div class = "section-one-r text-center">
+                  <div class = "section-one-r text-center">
                         <h2 class = "lg-title">Use the best resume maker as your guide!</h2>
                         <p class = "text">Getting that dream job can seem like an impossible task. We're here to change that. Give yourself a real advantage with the best online resume maker: created by experts, imporved by data, trusted by millions of professionals.</p>
                         <div class = "btn-group">
@@ -56,10 +56,10 @@
                             <a href = "#" class = "btn btn-secondary text-uppercase">watch video</a>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
-
+--> 
+</div>
         <div class = "section-two bg-bright">
             <div class="container">
                 <div class="section-two-content">
@@ -95,7 +95,7 @@
         <footer class = "footer bg-dark">
             <div class="container">
                 <div class = "footer-content text-center">
-                    <p class="fs-15">&copy;University Placement Cell. All Rights Reserved - <span>build.resume</span></p>
+                    <p class="fs-15">&copy;University Placement Cell. All Rights Reserved <!-- - <span>build.resume</span></p> -->
                 </div>
             </div>
         </footer>
