--- a/views/CompanyDashBoard.ejs
+++ b/views/CompanyDashBoard.ejs
@@ -61,8 +61,9 @@
     }
 
     function openResumeMatcher() {
-      console.log("Opening resume matcher...");
+     window.location.href= 'http://localhost:8501/';
     }
+    
   </script>
 </body>
 
